--- a/app/src/main/res/layout/category_item.xml
+++ b/app/src/main/res/layout/category_item.xml
@@ -13,22 +13,28 @@
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:textStyle="bold"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="16dp"
         android:text="ola mundo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"  />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_main"
-        tools:itemCount="5"
-        tools:listitem="@layout/movie_item"
-        android:background="@color/black"
+        android:id="@+id/rv_category"
         android:layout_width="match_parent"
-        app:layout_constraintTop_toBottomOf="@id/txt_title"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_height="150dp"
         android:layout_marginTop="8dp"
-        android:layout_height="150dp"/>
+        android:background="@color/black"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:clipToPadding="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/txt_title"
+        app:layout_constraintVertical_bias="1.0"
+        tools:itemCount="5"
+        tools:layout_editor_absoluteX="-180dp"
+        tools:listitem="@layout/movie_item" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
